--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,5 @@
 ---
+
 output: html_document
 pagetitle: Christine's Website
 ---
@@ -16,3 +17,6 @@ DNA!
 knitr::include_graphics(path = "./media/DNA.jpg")
 ```
 
+##here's a link
+
+[about me!](https://Cnromnana.github.io/about_me/)
